VDR Plugin 'upnp' Revision History
----------------------------------

 - New: Makefiles reviewed and almost completely rewritten to avoid
        redundancies.
        Thanks to Lucian Muresan
 - New: plugin makefile now links against the full file of the upnp plugin
        so-file. This makes symbolic link against the .so obsolete.
        Thanks to Lars Hanisch

2012-10-24: Version 1.0.0

 - New: Plug-ins for providing access to live-TV and recordings instead of
        integrated functions. This makes it easier to replace them. Additionally,
        new plug-ins may be integrated very easily.
 - New: The VDR plug-in live may be used for presentation home page.
 - New: The VDR plug-in streamdev is now used for live-TV. (via extern remux)
 - New: Tntnet is now used instead of the internal web server of libupnp. This
        enables the plugin to set HTTP headers without patching libupnp.
 - New: Live-TV channel icons are displayed as thumbnails in the folder preview.
 - New: Removed the requirement of FFMPEG in the basic plugins (live-TV and
        recordings). The plugin now uses only features of the VDR to detect
        the correct stream type of recordings.
 - New: Seeking is now finally possible on some devices (I have only tested
        Samsung TV-sets, yet). In this first attempt, it will use byte based
        seeks. Further attempts to improve it may be required.
 - New: Full rewrite of the rest of the plugin to reduce memory leaks as much
        as possible to me.

2009-01-25: Version 0.0.2-alpha1

 - Bug: A minor bug prevented the plugin from detecting the resources
        correnctly

2009-01-24: Version 0.0.2-alpha0

 - New: Added record streaming support for SDTV
        HDTV is not working yet, as it requires different DLNA profiles
 - Bug: Improved live-tv streaming quality, which will hopefully fix the
        problem with the buffer strategy and channels with bad bandwidth
 - New: Rearranged folder structure to meet future features