@@ -26,12 +26,12 @@ cPluginUpnp::~cPluginUpnp()
 
 const char *cPluginUpnp::CommandLineHelp(void)
 {
-  return "  The UPnP/DLNA server is designed to detect everything automatically.\n"
-         "  Therefore the user is not required to change most of the settings.\n"
-         "  \n"
-         "  -d <DB directory>    --db-dir=<DB directory>  Specifies the directory\n"
-         "                                                where the the database\n"
-         "                                                file shall be located.\n";
+  return tr("  The UPnP/DLNA server is designed to detect everything automatically.\n"
+            "  Therefore the user is not required to change most of the settings.\n"
+            "  \n"
+            "  -d <DB directory>    --db-dir=<DB directory>  Specifies the directory\n"
+            "                                                where the the database\n"
+            "                                                file shall be located.\n");
 }
 
 bool cPluginUpnp::ProcessArgs(int argc, char *argv[])
